# surface-filling-curve-flows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
models/surfaces/: README.md
models/surfaces/airplane/: scene.txt
models/surfaces/armadillo/: scene.txt
models/surfaces/bob/: bob_grayscale.txt  scene.txt
models/surfaces/scorpion/: scene.txt  scene_vfield.txt
modules/: CMakeLists.txt
modules/include/modules/: check_intersection.h  circumcenter.h  connect_surface_points.h  curve_evolution.h  curve_remesh_2d.h  curve_to_arclength.h  cut_mesh_with_curve.h  evolution_mode.h  exact_geodesics.h  gc_igl_convert.h  get_tangent_basis.h  global_area.h  medial_axis.h  medial_axis_2d.h  medial_axis_curve_euclidian.h  point_point_geodesic.h  read_curve_on_mesh.h  remesh_curve_on_surface.h  scene_file.h  surface_filling_energy_geodesic.h  surface_path_evolution.h  surface_point_tangent_basis.h  surface_point_to_cartesian.h  surface_point_value.h  surface_point_vector_field.h  tet_topology.h  write_curve.h
modules/src/: check_intersection.cpp  circumcenter.cpp  connect_surface_points.cpp  curve_evolution.cpp  curve_remesh_2d.cpp  curve_to_arclength.cpp  cut_mesh_with_curve.cpp  exact_geodesics.cpp  gc_igl_convert.cpp  get_tangent_basis.cpp  global_area.cpp  medial_axis.cpp  medial_axis_2d.cpp  medial_axis_curve_euclidian.cpp  point_point_geodesic.cpp  read_curve_on_mesh.cpp  remesh_curve_on_surface.cpp  scene_file.cpp  surface_filling_energy_geodesic.cpp  surface_path_evolution.cpp  surface_point_tangent_basis.cpp  surface_point_to_cartesian.cpp  surface_point_value.cpp  surface_point_vector_field.cpp  tet_topology.cpp  write_curve.cpp
src/: curve_on_surface.cpp  mesh_deformation.cpp
